--- a/client/html/base.css
+++ b/client/html/base.css
@@ -82,22 +82,29 @@
   padding: 3px 4px;
 }
 
-.mxp-menu {
+.mxp-menu-icon {
     line-height: inherit;
     color: #777;
 
     position: absolute;
-    right: -0.5rem;
-    font-size: 0.8rem;
-    top: -0.4rem; 
+    right: -0.8em;
+    font-size: 0.5em;
+    top: -0.6em;
 }
 
-a.mxp-send {
+.mxp-send {
     position: relative;
     text-decoration: underline;
     cursor: pointer;
     display: inline-block;
 }
+
+/*
+.mxp-send-menu > * {
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+}
+*/
 
 /* text styles */
 
