--- a/client/html/base.css
+++ b/client/html/base.css
@@ -35,6 +35,39 @@
   font-weight: 800;
 }
 
+.goto-suggestion-list {
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+}
+
+.goto-no-suggestions {
+  padding: 0 5px;
+  color: #777;
+}
+
+.goto-suggestion {
+  line-height: 1rem;
+  font-size: smaller;
+  clear: both;
+  margin: 0.4rem 0;
+}
+
+.goto-suggestion-play {
+  cursor: pointer;
+}
+
+.goto-suggestion-distance {
+  display: block;
+  color: #777;
+  margin-left: 5px;
+  float: right;
+}
+
+.goto-suggestion-caption {
+  padding-left: 5px;
+}
+
 .connection-form {
   line-height: 2.5rem;
 }
