--- a/client/html/base.css
+++ b/client/html/base.css
@@ -35,10 +35,17 @@
   font-weight: 800;
 }
 
+.echo {
+    color: orange;
+    font-weight: bolder;
+}
+
 .goto-suggestion-list {
   list-style-type: none;
-  padding: 10px;
+  padding: 5px;
   margin: 0;
+  display: table;
+  width: 100%;
 }
 
 .goto-no-suggestions {
@@ -48,24 +55,26 @@
 
 .goto-suggestion {
   line-height: 1rem;
-  font-size: smaller;
+  font-size: 0.85em;
   clear: both;
   margin: 0.4rem 0;
+  display: table-row;
 }
 
 .goto-suggestion-play {
   cursor: pointer;
+  display: table-cell;
 }
 
 .goto-suggestion-distance {
-  display: block;
   color: #777;
-  margin-left: 5px;
-  float: right;
+  display: table-cell;
+  text-align: right;
 }
 
 .goto-suggestion-caption {
   padding-left: 5px;
+  display: table-cell;
 }
 
 .connection-form {
