--- a/client/html/base.css
+++ b/client/html/base.css
@@ -35,6 +35,27 @@
   font-weight: 800;
 }
 
+.commands-widget {
+  display: table-cell;
+}
+
+.commands-widget-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.commands-widget-list-item {
+  display: inline-block;
+  padding: 0.2rem;
+  font-size: smaller;
+}
+
+a {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .echo {
     color: orange;
     font-weight: bolder;
