--- a/client/html/base.css
+++ b/client/html/base.css
@@ -40,6 +40,52 @@
     font-style: normal;
 }
 
+.statusline-wrap {
+  clear: both;
+}
+
+.statusline-bg {
+    /*background-color: #aaa;*/
+    /*border: 1px solid #ccc;*/
+    clear: both;
+    position: relative;
+}
+
+.statusline-inlinelabel {
+    top: 0;
+    position: absolute;
+    line-height: 1.3rem;
+    padding-left: 0.1rem;
+    margin: 1px;
+}
+
+.statusline-wrap {
+    margin: 0.4rem;
+    min-width: 150px;
+}
+
+.statusline-label {
+    /*color: #c6c8c8;*/
+    font-size: small;
+    padding-left: 2px; 
+    line-height: 1.8rem;
+    white-space: nowrap;
+}
+
+.spell-action {
+    display: block;
+    width: 16px;
+    height: 16px;
+    margin-top: 4px;
+    cursor: pointer;
+    text-shadow: none;
+}
+
+.spell-actions {
+    float: left;
+    padding-right: 4px;
+}
+
 .commands-widget {
   display: table-cell;
 }
